[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name="magma_kernel"
dynamic = [
    "version",
]
version="0.0.3"
description="A magma kernel for Jupyter"
authors=[{name = "Edgar Costa", email = "edgarc@mit.edu"}]
license={text = "BSD 3-Clause License"}
keywords=["magma", "kernel", "jupyter"]
readme = "README.md"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: BSD 3-Clause License",
  "Programming Language :: Python"
]
dependencies = [
    "pexpect",
    "ipykernel",
    "jupyter_client",
]

[project.urls]
homepage = "https://github.com/edgarcosta/magma_kernel"
repository = "https://github.com/edgarcosta/magma_kernel"

[tool.hatch.version]
path = "magma_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = [
    "/magma_kernel",
]


[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"

